--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "speedconcat",
-  "version": "1.0.0",
-  "description": "0.0.0",
+  "version": "1.0.1",
+  "description": "Provides faster concatenation of large numbers of strings.",
   "main": "code.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
